Fix horizontal scroll.

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,7 +1,9 @@
-/* Main CSS file. Nothing yet */
-
 body {
     background-color: #5abcec;
+    overflow-x: hidden;
+}
+
+html {
     overflow-x: hidden;
 }
 
