--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -247,9 +247,12 @@ button {
   zoom: 1;
 }
 
-/* Main CSS file. Nothing yet */
 body {
   background-color: #5abcec;
+  overflow-x: hidden;
+}
+
+html {
   overflow-x: hidden;
 }
 
